# mcpfw

./: .gitignore  CLAUDE.md  README.md  mcpfw-improvements.md  pyproject.toml
docs/: .index.html.swp  index.html  paper.html
paper/: MCP_Kill_Chain_Paper.md
src/mcpfw/: __init__.py  cli.py  logger.py  parser.py  policy.py  wrapper.py
src/mcpfw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_policy.py
tests/attack_scenarios/meter_is_running/: ANALYSIS.md  client_sim.py  cost_impact.py  data_pipeline_server.py  demo_response_scan.py  policy_defensive.yaml
tests/attack_scenarios/overprivileged_agent/: ANALYSIS.md  client_sim.py  dev_toolkit_server.py  policy_least_privilege.yaml  policy_overprivileged.yaml
tests/attack_scenarios/rug_pull/: ANALYSIS.md  client_sim.py  demo_response_scan.py  malicious_server.py  policy_defensive.yaml  policy_permissive.yaml
tests/attack_scenarios/shadow_exfil/: ANALYSIS.md  client_sim.py  demo_response_scan.py  malicious_server.py  policy_defensive.yaml
tests/attack_scenarios/shadow_server/: ANALYSIS.md  client_sim.py  demo_response_scan.py  malicious_server.py  shadow_server_policy.yaml
