[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpfw"
version = "0.1.0"
description = "The runtime firewall for Model Context Protocol (MCP)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Mohamed Waseem", email = "mwaseem@defendai.tech" },
]
keywords = ["mcp", "firewall", "security", "ai-agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mcpfw = "mcpfw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
